weblate/static/styles/main.css
/* ... */
.nav-link.dropdown-toggle.support::after {
  display: none;
}

.navbar-form .form-control {
  padding: 6px 12px;
  font-size: 16px;
  border-radius: var(--border-radius-sm);
  color: #555555;
}

.text-warning {
  font-size: 14px;
  margin: 5px 5px 0px;
}

.card label {
  font-weight: bold;
}

.comment-content strong {
  font-size: 16px;
  font-weight: bold;
}

.list-group:has(+ .card-footer) {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

.btn-outline-primary .disabled {
  opacity: 65%;
}

.zen-unit td {
  background-color: inherit;
}

.zen-unit .list-group-item {
  border-radius: var(--border-radius-sm);
  border: 1px solid #bfc3c7;
}

.card-header > .card-title > .badge {
  background-color: var(--bs-secondary);
}

.card-header.text-bg-warning > .card-title > .badge {
  color: #fcf8e3;
  background-color: #8a6d3b;
}

.card-header.text-bg-warning > .card-title {
  color: #8a6d3b;
}

.translator .card .list-group .list-group-item {
  border-radius: 4px;
}

.badge.text-bg-info {
  color: #ffffff !important;
}

.text-bg-success {
  color: #3c763d !important;
}

.input-group-text {
  border-radius: 4px;
}

